--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.1.5</version>
+		<version>3.1.3</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example.sentry</groupId>
@@ -22,7 +22,7 @@
 			<dependency>
 				<groupId>io.sentry</groupId>
 				<artifactId>sentry-bom</artifactId>
-				<version>6.33.1</version>
+				<version>6.26.0</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
@@ -45,14 +45,20 @@
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 		</dependency>
-<!--		<dependency>-->
-<!--			<groupId>io.sentry</groupId>-->
-<!--			<artifactId>sentry-logback</artifactId>-->
-<!--		</dependency>-->
+		<dependency>
+			<groupId>io.sentry</groupId>
+			<artifactId>sentry-logback</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>io.sentry</groupId>
 			<artifactId>sentry-spring-boot-starter-jakarta</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
